--- a/simple-crop-image-lib/build.gradle
+++ b/simple-crop-image-lib/build.gradle
@@ -5,7 +5,7 @@ buildscript {
   }
 
   dependencies {
-    classpath 'com.android.tools.build:gradle:0.5.6'
+    classpath 'com.android.tools.build:gradle:0.11.+'
   }
 }
 
@@ -15,11 +15,11 @@ dependencies {
 }
 
 android {
-  compileSdkVersion 17
-  buildToolsVersion "17.0"
+  compileSdkVersion 19
+  buildToolsVersion "19.1.0"
   defaultConfig {
     minSdkVersion 9 
-    targetSdkVersion 15
+    targetSdkVersion 19
   }
   sourceSets {
     main {
